Create jwt token and seed data
